<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="music"
            type="com.example.itunes_clone.domain.Music" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimaryBackground">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"/>
        <ImageView
            android:id="@+id/ivMusic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            tools:src="@drawable/ic_music"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/ivMusic"
            android:text="@string/string_track_name"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toEndOf="@id/ivMusic"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTrackNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@{music.trackName.empty ? @string/string_no_track_name : music.trackName}"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toEndOf="@id/tvTrackName"
            app:layout_constraintTop_toTopOf="@id/tvTrackName"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            tools:text="Title here" />


        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_genre"
            android:textColor="@color/colorPrimaryTextColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvTrackNameValue"
            app:layout_constraintStart_toStartOf="@id/tvTrackName"/>

        <TextView
            android:id="@+id/tvGenreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{music.genre}"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toStartOf="@id/tvTrackNameValue"
            app:layout_constraintTop_toBottomOf="@id/tvTrackNameValue"
            app:layout_constraintEnd_toEndOf="@id/tvTrackNameValue"
            tools:text="Genre here" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_artist"
            android:textColor="@color/colorPrimaryTextColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            app:layout_constraintStart_toStartOf="@id/tvGenre"/>

        <TextView
            android:id="@+id/tvArtistValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{music.artist}"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toStartOf="@id/tvGenreValue"
            app:layout_constraintTop_toBottomOf="@id/tvGenreValue"
            app:layout_constraintEnd_toEndOf="@id/tvGenreValue"
            tools:text="Artist here" />

        <TextView
            android:id="@+id/tvDescription"
            android:text="@string/string_description"
            android:textColor="@color/colorPrimaryTextColor"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/ivMusic"
            app:layout_constraintStart_toStartOf="@id/ivMusic"/>

        <TextView
            android:id="@+id/tvDescriptionValue"
            android:textColor="@color/colorPrimaryTextColor"
            android:text="@{music.description.empty ? @string/string_no_description : music.description}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="@id/tvDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            tools:text="Sample Description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>