<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="music"
            type="com.example.itunes_clone.domain.Music" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimaryBackground">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"/>
        <ImageView
            android:id="@+id/ivMusic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            tools:src="@drawable/ic_music"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/txtTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/ivMusic"
            android:text="@string/string_track_name"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toEndOf="@id/ivMusic"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTrackNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{music.trackName.empty ? @string/string_no_track_name : music.trackName}"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toEndOf="@id/txtTrackName"
            app:layout_constraintTop_toTopOf="@id/txtTrackName"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            tools:text="Title here" />


        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_genre"
            android:textColor="@color/colorPrimaryTextColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtTrackName"
            app:layout_constraintStart_toStartOf="@id/txtTrackName"/>

        <TextView
            android:id="@+id/txtGenreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{music.genre}"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toStartOf="@id/txtTrackNameValue"
            app:layout_constraintTop_toBottomOf="@id/txtTrackNameValue"
            app:layout_constraintEnd_toEndOf="@id/txtTrackNameValue"
            tools:text="Genre here" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_price"
            android:textColor="@color/colorPrimaryTextColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtGenre"
            app:layout_constraintStart_toStartOf="@id/txtGenre"/>

        <TextView
            android:id="@+id/txtPriceValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{String.format(@string/string_currency_value, music.price)}"
            android:textColor="@color/colorPrimaryTextColor"
            app:layout_constraintStart_toStartOf="@id/txtGenreValue"
            app:layout_constraintTop_toBottomOf="@id/txtGenreValue"
            app:layout_constraintEnd_toEndOf="@id/txtGenreValue"
            tools:text="Price here" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>